--- a/src/App.css
+++ b/src/App.css
@@ -57,54 +57,6 @@ h3 {
   margin-bottom: 1rem;
 }
 
-.form-header {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-
-.form-header-search {
-  margin-left: auto;
-}
-
-.form-header h3 {
-  margin-bottom: 0;
-}
-
-.form-content {
-  display: flex;
-  flex-wrap: wrap;
-  gap: .5rem;
-  margin-bottom: 1rem;
-}
-
-.form-group {
-  display: flex;
-  align-items: center;
-  gap: .5rem;
-  position: relative;
-}
-
-.icon-form-group input[type='text'] {
-  padding-left: 3.5rem;
-}
-
-.icon-form-group .icon {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  left: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: black;
-
-}
-
-
 .doctor-card {
   display: flex;
   align-items: center;
@@ -129,4 +81,8 @@ h3 {
 .error-message {
   color: var(--red);
   font-weight: bold;
+}
+
+input[type='date'] {
+  margin-bottom: 1rem;
 }
